corrected issue with margins on smaller screens

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ ul {
     left: 20%;
     right: 20%;
     color: rgb(72, 107, 84, 0.6);
-    font-size: clamp(0.2rem, 1rem, 1vw);
+    font-size: clamp(0.02rem, 0.8rem, 1.5vw);
 }
 
 .credit a {
@@ -81,18 +81,21 @@ ul {
     display: flex;
     flex-direction: column;
     font-family: mainFont;
+    height: 100%;
 }
 
 .warning-message {
     font-size: 24px;
     width: 100%;
-    height: 380px;
+    /* height: 380px; */
+    height: 30vh;
     background-color: #f9fafb;
 }
 
 .paragraph {
     width: 700px;
-    margin: 120px 50px 60px 40px;
+    /* margin: 120px 50px 60px 40px; */
+    margin: 6vh 50px 30px 40px;
 }
 
 form {
